<resources>
    <string name="app_name">Shopping List</string>
    <string name="nav_open">Nav drawer open</string>
    <string name="nav_closed">Nav drawer closed</string>

    <string name="str_home">Home</string>
    <string name="str_shoppinglist">Shopping List</string>
    <string name="str_additem">Add Item</string>
    <string name="str_settings">Settings</string>

    <string name="str_menu_nav_item0">Home</string>
    <string name="str_menu_nav_item1">Shopping List</string>
    <string name="str_menu_nav_item2">Add Item</string>
    <string name="str_menu_nav_item_3">Settings</string>

    <string name="str_welcomescreen">Welcome back</string>
    <string name="str_stats1">Total number of items added to your list:</string>
    <string name="str_stats2">Total number of unique items you\'ve bought:</string>
    <string name="str_stats3">Total quantity of items you\'ve bought:</string>

    <string name="str_help">Help</string>
    <string name="str_help1">Use the side-drawer to navigate to the \'Add Item\' page.</string>
    <string name="str_help2">Once there, enter the name and quantity of the item.</string>
    <string name="str_help3">Once you have bought the item, remove it from the \'List\' page.</string>

    <string name="str_addformtitle">Add Item Form</string>
    <string name="str_navtitle">Shopping Application</string>
    <string name="str_welcome">Welcome to Matt\'s Shopping Application!</string>

    <string name="str_addtitle">Please input the following fields:</string>
    <string name="str_itemname">Item Name</string>
    <string name="str_quantity">Quantity</string>
    <string name="str_submit">Submit</string>
    <string name="int_defaultquant">1</string>

    <string name="str_fraglabel1">Item Name: </string>
    <string name="str_fraglabel2">Item Quantity: </string>
    <string name="str_fraglabel3">ID: </string>

    <string name="str_buy">Buy</string>

    <string name="str_localisation">Localisation</string>
    <string name="str_english">English</string>
    <string name="str_welsh">Welsh</string>
    <string name="str_data">Data</string>
    <string name="str_personalise">Personalise</string>
    <string name="str_storage">Storage</string>
    <string name="str_user">User</string>
    <string name="str_clear">Clear List</string>
    <string name="str_setname">Set Name</string>
    <string name="str_clearhistory">Clear History</string>

    <string name="str_toast_itemremoved">Item Removed</string>
    <string name="str_toast_itemadded">Item Added</string>
    <string name="str_toast_setname">Name set as</string>
    <string name="str_toast_listcleared">List Cleared</string>
    <string name="str_toast_historycleared">History Cleared</string>
    <string name="str_toast_loadsuccess">Load Successful!</string>
    <string name="str_toast_savesuccess">Save Successful!</string>
    <string name="str_toast_loadfail">No Save Data Present</string>

    <string name="str_alert_listcleared">Are you sure you want to clear your list?</string>
    <string name="str_alert_historycleared">Are you sure you want to clear your history?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>

    <string name="save">Save</string>
    <string name="load">Load</string>
</resources>