<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lbl_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="64dp"
            android:text="@string/str_localisation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_languages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:checkedButton="@id/rb_english"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <RadioButton
                android:id="@+id/rb_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/str_english" />

            <RadioButton
                android:id="@+id/rb_welsh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/str_welsh" />

        </RadioGroup>

        <TextView
            android:id="@+id/lbl_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="170dp"
            android:text="@string/str_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_personalise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="69dp"
            android:text="@string/str_personalise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_data" />

        <TextView
            android:id="@+id/lbl_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="13dp"
            android:text="@string/str_storage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_name" />

        <EditText
            android:id="@+id/tb_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/str_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_personalise" />

        <Button
            android:id="@+id/btn_clearlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:text="@string/str_clear"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_clearhistory"
            app:layout_constraintEnd_toEndOf="@+id/lbl_personalise"
            app:layout_constraintStart_toEndOf="@+id/lbl_personalise" />

        <Button
            android:id="@+id/btn_setname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:text="@string/str_setname"
            app:layout_constraintBottom_toBottomOf="@+id/tb_name"
            app:layout_constraintStart_toEndOf="@+id/tb_name" />

        <Button
            android:id="@+id/btn_clearhistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="38dp"
            android:width="150dp"
            android:text="@string/str_clearhistory"
            app:layout_constraintBottom_toTopOf="@+id/btn_setname"
            app:layout_constraintStart_toEndOf="@+id/btn_clearlist" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="32dp"
            android:src="@mipmap/englishflag"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/rg_languages"
            app:layout_constraintTop_toTopOf="@+id/lbl_local" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="166dp"
            android:layout_marginRight="166dp"
            android:layout_marginBottom="42dp"
            android:src="@mipmap/welshflag"
            app:layout_constraintBottom_toTopOf="@+id/btn_clearlist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rg_languages"
            app:layout_constraintTop_toBottomOf="@+id/lbl_local" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:width="210dp"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_storage" />

        <Button
            android:id="@+id/btn_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="210dp"
            android:text="@string/load"
            app:layout_constraintStart_toStartOf="@+id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/btn_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>