<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ItemAdd">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/lbl_title"
        app:layout_constraintStart_toEndOf="@+id/lbl_title">

        <TextView
            android:id="@+id/tv_titlepush"
            android:layout_width="411dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lbl_itemname"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/str_addtitle"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tv_titlepush"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tb_itemname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:width="300dp"
            android:maxLength="14"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_itemname"
            app:layout_constraintTop_toTopOf="@+id/lbl_itemname" />

        <TextView
            android:id="@+id/lbl_itemname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/str_itemname"
            app:layout_constraintEnd_toStartOf="@+id/tb_itemname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_title" />

        <TextView
            android:id="@+id/lbl_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:text="@string/str_quantity"
            app:layout_constraintEnd_toStartOf="@+id/tb_quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tb_quantity" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:width="200dp"
            android:text="@string/str_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_quantity" />

        <EditText
            android:id="@+id/tb_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:width="300dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4"
            android:text="@string/int_defaultquant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_quantity"
            app:layout_constraintTop_toBottomOf="@+id/tb_itemname" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>